adding: services, di and data layer

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   get_it: ^7.2.0
   dartz: ^0.10.1
   intl: ^0.18.0
+  http: ^0.13.5
+  chuck_interceptor: ^1.1.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
