--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   http: ^0.13.5
   chuck_interceptor: ^1.1.2
   shared_preferences: ^2.0.15
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
